welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value biscuit
var biscuit():Boolean=false;	
    ^Program:8: error: not found: value biscuit
 		biscuit = true;
                ^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
 recule(6);
       ^